# media-tracker

./: CONTRIBUTING.md  ISSUES.md  pyproject.toml  readme.md  requirements.txt  todo.md
backend/: .env.example  app.py  requirements.txt
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[[...sign-in]]/: page.tsx
frontend/src/app/anime/: page.tsx
frontend/src/app/anime/[id]/: page.tsx
frontend/src/app/api/anime/[id]/: route.ts
frontend/src/app/api/auth/: route.ts
frontend/src/app/api/movies/[id]/: route.ts
frontend/src/app/api/shows/[id]/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/movies/: page.tsx
frontend/src/app/movies/[id]/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/shows/: loading.tsx  page.tsx
frontend/src/app/shows/[id]/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/subscriptions/: page.tsx
frontend/src/app/supporters/: page.tsx
frontend/src/app/verify-email/: page.tsx
frontend/src/components/: AuthButtons.tsx  WatchStatusDropdown.tsx  content-grid.tsx  dashboard-layout.tsx  loading-message.tsx  login-form.tsx  movie-card.tsx  movie-grid.tsx  movie-section.tsx  navbar.tsx  signup-form.tsx  theme-switcher.tsx  watch-status-dropdown.tsx
frontend/src/components/ui/: toast.tsx  use-toast.ts
frontend/src/lib/: api.ts  constants.ts
src/: app.py
